--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: frontend
     build: ./frontend
     ports:
-      - "3000:3000"
+      - "3003:3003"
     depends_on:
       - backend
   backend:
@@ -12,3 +12,10 @@ services:
     build: ./backend
     ports:
       - "3333:3333"
+    depends_on:
+      - db
+  db:
+    container_name: db
+    build: ./db
+    ports:
+      - "5469:5469"
