--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
 DB_CONNECTION=pg
 DB_HOST=127.0.0.1
-DB_PORT=5469
-DB_USER=myuser
-DB_PASSWORD=mypassword
+DB_PORT=5432
+DB_USER=user
+DB_PASSWORD=user
 DB_DATABASE=mydatabase
 
 PORT=3333
