--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,11 +1,13 @@
-FROM node:latest AS build
-WORKDIR /app
-COPY package*.json ./
-RUN npm install
-COPY . .
-RUN npm run build
+FROM node:lts-alpine
 
-FROM node:latest
-WORKDIR /app
-COPY --from=build /app/build /app
+RUN npm config set strict-ssl=false
+
+RUN mkdir -p /usr/src
+WORKDIR /usr/src
+
+COPY . /usr/src
+
+EXPOSE 3000
+
+RUN npm install --force
 CMD ["npm", "start"]
