--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,22 @@ version: "3.9"
 services:
   frontend:
     container_name: frontend
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: ./frontend/dockerfile
+    volumes:
+    - .:/home/node/app
+    - /home/node/app/node_modules
     ports:
-      - "3003:3003"
-    depends_on:
-      - backend
+      - "3001:3000"
+    env_file:
+      - ./frontend/.env
   backend:
     container_name: backend
-    build: ./backend
+    build: 
+      context: ./backend
+      dockerfile: ./backend/dockerfile
     ports:
-      - "3333:3333"
-    depends_on:
-      - db
-  db:
-    container_name: db
-    build: ./db
-    ports:
-      - "5469:5469"
+      - "3331:3333"
+    env_file:
+      - ./backend/.env
