--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,11 +29,9 @@ services:
       - app-network
   postgres_db:
     container_name: postgres_db
-    image: postgres
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: baseproject
+    build: 
+      context: ./db
+      dockerfile: dockerfile
     ports:
       - "5469:5432"
     networks:
