--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DB_CONNECTION=pg
 DB_HOST=postgres_db
-DB_PORT=5469
+DB_PORT=5432
 DB_USER=user
 DB_PASSWORD=mypassword
 DB_DATABASE=baseproject
@@ -11,4 +11,6 @@ NODE_ENV=development
 APP_KEY=KKzR7MXwYbzTYn-AA4qXCH9MpzvFAe1D
 DRIVE_DISK=local
 
+PG_HOST=127.0.0.1
+PG_PORT=5432
 
